# dsa_similarity_algorithms

./: README.md  main.py  pyproject.toml
record_link/: __init__.py  __main__.py
record_link/blocking/: keys.py
record_link/core/: normalize.py
record_link/linkage/: scorer.py
record_link/metrics/: jaro.py  levenshtein.py
record_link/phonetic/: metaphone.py  soundex.py
tests/: test_bench_perf.py  test_core.py  test_correctness_table.py  test_failure_modes.py  test_phonetic.py
