[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dsa-similarity-algorithms"
version = "0.1.0"
description = "String similarity + phonetic algorithms for record linkage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.2",
]


[tool.hatch.build.targets.wheel]
packages = ["record_link"]

[tool.ruff]
line-length = 100
